--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>الجوهرة المطلقة | Absolute Jewel</title>
+    <meta name="google-site-verification" content="zqFRxdg4UndFS8CuPluXEWjgWuPB4UXqG4vcYWN_OVk" />
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@200;300;400;500;700;800;900&display=swap');
@@ -304,3 +306,4 @@
 </body>
 
 </html>
+
